# bugsnag-rs

./: .travis.yml  Cargo.toml  README.md
bugsnag-api/: Cargo.toml
bugsnag-api/src/: bugsnag.rs  event.rs  exception.rs  lib.rs  notification.rs  stacktrace.rs
examples/: log_integration.rs  panic_handler_global_instance.rs  simple_panic_handler.rs
examples/panic_test/: Cargo.toml
examples/panic_test/src/: main.rs
src/: appinfo.rs  bugsnag.rs  bugsnag_impl.rs  deviceinfo.rs  event.rs  exception.rs  globalinstance.rs  handler.rs  lib.rs  notification.rs  panic.rs  stacktrace.rs
