[package]
name = "bugsnag"
version = "0.1.0"
authors = ["Bastian Köcher <git@kchr.de>"]
description = "The api of Bugsnag in rust."
homepage = "https://github.com/superscale/bugsnag-rs"
repository = "https://github.com/superscale/bugsnag-rs"
readme = "README.md"
keywords = ["bug", "reporting"]
license = "MIT"

[dependencies]
hyper = "0.5"
backtrace = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
serde_test = "0.9"
sys-info = "0.4.1"

[dev-dependencies]
lazy_static = "0.2"
log = "0.3"
