[package]
name = "bugsnag"
version = "0.2.0"
authors = ["Bastian Köcher <git@kchr.de>"]
description = "The api of Bugsnag in rust."
documentation = "https://docs.rs/bugsnag/"
homepage = "https://github.com/superscale/bugsnag-rs"
repository = "https://github.com/superscale/bugsnag-rs"
readme = "README.md"
keywords = ["bug", "reporting"]
license = "MIT"

[badges]
travis-ci = { repository = "superscale/bugsnag-rs", branch = "master" }

[dependencies]
hyper = "0.10"
backtrace = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
serde_test = "0.9"
sys-info = "0.4.1"

[dev-dependencies]
lazy_static = "0.2"
log = "0.3"
